--- a/index.html
+++ b/index.html
@@ -6,171 +6,278 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <!-- Load the Twitch embed JavaScript file -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
 </head>
 
-<script type="text/javascript">
-    let url = window.location.href;
-    var client_id = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
-    var currentAccessToken = undefined;
-
-    var channels = ['yannick_sf'];
-    var index = 0;
-    var currentChannel = undefined;
-
-
-    if (url.includes('access_token')) {
-        let params = url.split('#');
-        let strAcctoken = params[1].split('&');
-        currentAccessToken = strAcctoken[0].split('=')[1];
-        console.log(currentAccessToken);
-        apiGetUserInfos();
-    }
-
-    function progUp() {
-        if (index == channels.length - 1) {
-            index = 0;
-        } else {
-            index++;
-        }
-        currentChannel.setChannel(channels[index]);
-
-    }
-
-    function progDown() {
-        if (index == 0) {
-            index = channels.length - 1;
-        } else {
-            index--;
-        }
-        currentChannel.setChannel(channels[index]);
-    }
-
-    function addStreamerTochannels() {
-        let value = document.getElementById('search-streamer');
-        let view = document.getElementById('channels-view');
-
-        channels.push(value.value);
-        view.innerHTML += '<span class="tag is-medium">' + value.value + '</span> '
-        value.value = ''
-    }
-
-    function apiGetUserInfos() {
-        if (currentAccessToken != undefined) {
-
-            axios.get("https://api.twitch.tv/helix/users", {
-                headers: {
-                    'Authorization': 'Bearer ' + currentAccessToken,
-                    'Client-Id': client_id
-                }
-            }).then((response) => {
-
-                let userInfos = response.data.data[0]
-                axios.get("https://api.twitch.tv/helix/streams/followed?user_id=" + userInfos.id, {
-                    headers: {
-                        'Authorization': 'Bearer ' + currentAccessToken,
-                        'Client-Id': client_id
-                    }
-                }).then((resp) => {
-
-                    let streamList = resp.data.data
-                    for (var e in streamList) {
-                        channels.push(streamList[e].user_login);
-                        document.getElementById('channels-view').innerHTML += '<span class="tag is-medium">' + streamList[e].user_login + '</span> ';
-                    }
-                })
-
-            });
-        }
-    }
-</script>
-
 <body>
-    <section class="container">
-        <div class="columns">
-            <div class="column is-10 is-offset-1">
-                <h1 class="title">MulT Vers</h1>
-                <h2 class="subtitle">One view to see them all !</h2>
-                <hr>
-                <!-- Add a placeholder for the Twitch embed -->
-                <div id="twitch-embed"></div>
+    <div class="columns">
+        <div class="column is-12">
 
-                <!-- Load the Twitch embed JavaScript file -->
-                <script src="https://embed.twitch.tv/embed/v1.js"></script>
-
-                <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
-                <script type="text/javascript">
-                    currentChannel = new Twitch.Embed("twitch-embed", {
-                        width: 1100,
-                        height: 600,
-                        channel: channels[index],
-                        // Only needed if this page is going to be embedded on other websites
-                        parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
-                    });
-                </script>
-
-                <hr>
-                <div class="container column is-4 is-offset-8">
-                    <button class="button is-info is-light" onClick="progDown()"><</button>
-                    <button class="button is-info is-light" onClick="progUp()">></button>
-                    <button class="button">+</button>
-                    <button class="button">-</button>
-                    <button class="button is-dark is-light"><a target="_blank" href="https://www.netflix.com/browse">Netflix</a></button>
-                    <button class="button is-warning"><a target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button>
-                </div>
-
-                <hr>
-                <div class="container columns">
-                    <div class="column is-1">
-                        <button class="button is-link">
-                            <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=https://hilarious-naiad-d54a76.netlify.app&scope=user:read:follows&response_type=token">Twitch</a>
-                        </button>
+            <!-- HEADER -->
+            <div class="container">
+                <nav class="navbar">
+                    <div class="navbar-brand">
+                        <p class="title"><a href="http://localhost:3000/">Mul[T•V]ers</a></p>
                     </div>
 
-                    <div class="container column is-6">
-                        <p id="channels-view"></p>
+                    <div class="navbar-menu">
+                        <div class="navbar-end">
+                            <div class="navbar-item"><button class="button is-dark "><a style="color:red;" target="_blank" href="https://www.netflix.com/browse">Netflix</a></button></div>
+                            <div class="navbar-item"><button class="button is-black"><a style="color: yellow;" target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button></div>
+                            <div class="navbar-item"><button class="button is-info "><a style="color:white;" target="_blank" href="">Prime Vidéo</a></button></div>
+                            <div class="navbar-item"><button class="button is-light"><a style="color: blue;" target="_blank" href="">Disney +</a></button></div>
+                        </div>
                     </div>
+                </nav>
+                <hr>
+            </div>
 
+            <!-- Balise du player -->
+            <div id="place-player">
+                <div id="player"></div>
+            </div>
 
-                    <div class="container column is-4">
-                        <div class="field has-addons">
-                            <div class="control">
-                                <input id="search-streamer" class="input is-rounded" type="text" placeholder="ajouter un streamer">
+            <div class="container">
+                <!-- TWITCH -->
+                <hr>
+                <nav class="level">
+                    <div class="level-left">
+                        <div class="level-item">
+                            <button class="button is-primary is-rounded"> 
+                                <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Log In</a> 
+                            </button>
+                        </div>
+                        <div class="level-item">
+                            <button class="button is-link" onClick="loadTwitchPlayer()">Twitch</button>
+                        </div>
+                        <div class="level-item">
+                            <p id="channels-view"></p>
+                        </div>
+                        <div class="level-item">
+                            <div class="field has-addons">
+                                <div class="control">
+                                    <input id="search-streamer" class="input is-rounded" type="text" placeholder="">
+                                </div>
+                                <div class="control">
+                                    <button class="button is-link is-light is-rounded" onClick="addStreamerTochannels()">Search</button>
+                                </div>
                             </div>
-                            <div class="control">
-                                <button class="button is-link is-light is-rounded" onClick="addStreamerTochannels()">Ajouter</button>
+                        </div>
+                    </div>
+
+                    <div class="level-right">
+                        <p class="level-item"><button class="button is-info is-light" onClick="progDown()"><</button></p>
+                        <p class="level-item"><button class="button is-info is-light" onClick="progUp()">></button></p>
+                    </div>
+                </nav>
+
+                <!-- YOUTUBE -->
+                <hr>
+                <div class="level">
+                    <div class="level-right">
+                        <div class="level-item">
+                            <button class="button is-primary is-rounded">
+                                <a style="color:white;" href="" <!--href="https://accounts.google.com/o/oauth2/v2/auth?client_id=414258510687-2sr6glgkobrm6brigtn241jv8prqndas.apps.googleusercontent.com&redirect_uri=http://localhost:3000&response_type=token&scope=https://www.googleapis.com/auth/youtube.readonly"--> </a>Log In</a>
+                            </button>
+                        </div>
+                        <div class="level-item">
+                            <button class="button is-danger" onClick="">Youtube</button>
+                        </div>
+
+                        <div class="level-item">
+                            <div class="field has-addons">
+                                <div class="control">
+                                    <input id="search-streamer" class="input is-rounded" placeholder="Coming soon ..." type="text">
+                                </div>
+                                <div class="control">
+                                    <button class="button is-danger is-light is-rounded" onClick="">Search</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <hr>
-                <div class="container columns">
-                    <div class="column is-1">
-                        <button class="button is-danger">Youtube</button>
-                    </div>
-
-                    <div class="container column is-6">
-                        <p id="yt-view"></p>
-                    </div>
-
-
-                    <div class="container column is-4">
-                        <div class="field has-addons">
-                            <div class="control">
-                                <input id="search-youtube" class="input is-rounded" type="text" placeholder="ajouter une vidéo">
-                            </div>
-                            <div class="control">
-                                <button class="button is-danger is-light is-rounded" onClick="">
-                                        Ajouter
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                <div id="yt-sub" class="columns is-multiline">
                 </div>
+
             </div>
         </div>
-        </div>
-    </section>
+
+        <script type="text/javascript">
+            var channels = ['yannick_sf'];
+            var index = 0;
+            var currentPlayer = undefined;
+            var currentPlayerMode = undefined;
+
+            function progUp() {
+
+                if (index == channels.length - 1) {
+                    index = 0;
+                } else {
+                    index++;
+                }
+                currentPlayer.setChannel(channels[index]);
+
+            }
+
+            function progDown() {
+
+                if (index == 0) {
+                    index = channels.length - 1;
+                } else {
+                    index--;
+                }
+                currentPlayer.setChannel(channels[index]);
+            }
+
+            function refreshPlayer() {
+                if (currentPlayerMode == 'yt') {
+                    document.getElementById('player').remove();
+
+                    let ppl = document.getElementById('place-player');
+                    let newplayer = document.createElement('div');
+                    newplayer.id = 'player';
+                    ppl.append(newplayer);
+                }
+            }
+
+            function loadDefault() {
+                if (currentPlayerMode == 'tw') {
+                    loadTwitchPlayer();
+                } else if (currentPlayerMode == 'yt') {
+                    onYouTubeIframeAPIReady();
+                } else {
+                    currentPlayerMode == 'tw';
+                    loadTwitchPlayer();
+                }
+            }
+
+            // SETTINGS << 
+            let url = window.location.href;
+
+            var twClientId = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
+            var twAccessToken = undefined;
+
+            var ytClientId = '414258510687-2sr6glgkobrm6brigtn241jv8prqndas.apps.googleusercontent.com';
+            var ytApiKey = 'AIzaSyB9jIFZNvFR_Dyn5wuRokxGQo-x-Wypupg';
+            var ytAccessToken = undefined;
+
+            if (url.includes('access_token') && url.includes('youtube')) {
+                let params = url.split('#');
+                let strAcctoken = params[1].split('&');
+                ytAccessToken = strAcctoken[0].split('=')[1];
+                currentPlayerMode = 'yt';
+
+            } else if (url.includes('access_token')) {
+                let params = url.split('#');
+                let strAcctoken = params[1].split('&');
+                twAccessToken = strAcctoken[0].split('=')[1];
+                currentPlayerMode = 'tw';
+
+            }
+
+            loadDefault();
+
+            // TWITCH <<
+            function loadTwitchPlayer() {
+
+                if (currentPlayerMode == 'yt') {
+                    refreshPlayer();
+                }
+
+                currentPlayer = new Twitch.Embed("player", {
+                    width: '100%',
+                    height: 700,
+                    channel: channels[index],
+                    // Only needed if this page is going to be embedded on other websites
+                    parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
+                });
+
+                if (twAccessToken != undefined) {
+                    twApiGetUserInfos();
+                }
+            }
+
+            function twApiGetUserInfos() {
+                axios.get("https://api.twitch.tv/helix/users", {
+                    headers: {
+                        'Authorization': 'Bearer ' + twAccessToken,
+                        'Client-Id': twClientId
+                    }
+                }).then((response) => {
+
+                    let userInfos = response.data.data[0]
+                    axios.get("https://api.twitch.tv/helix/streams/followed?user_id=" + userInfos.id, {
+                        headers: {
+                            'Authorization': 'Bearer ' + twAccessToken,
+                            'Client-Id': twClientId
+                        }
+                    }).then((resp) => {
+
+                        let streamList = resp.data.data
+                        for (var e in streamList) {
+                            channels.push(streamList[e].user_login);
+                            document.getElementById('channels-view').innerHTML += '<span class="tag is-medium">' + streamList[e].user_login + '</span> ';
+                        }
+                    })
+
+                });
+
+            }
+
+            function addStreamerTochannels() {
+                let value = document.getElementById('search-streamer');
+                let view = document.getElementById('channels-view');
+
+                channels.push(value.value);
+                view.innerHTML += '<span class="tag is-medium">' + value.value + '</span> '
+                value.value = ''
+            }
+
+            // YOUTUBE << 
+            function onYouTubeIframeAPIReady(chooseVideoId) {
+
+                var tag = document.createElement('script');
+                tag.src = "https://www.youtube.com/iframe_api";
+
+                var firstScriptTag = document.getElementsByTagName('script')[0];
+                firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+                currentPlayer = new YT.Player('player', {
+                    width: '100%',
+                    height: '700',
+                    videoId: chooseVideoId
+                });
+
+                currentPlayerMode = 'yt';
+            }
+
+            function ytApiSub() {
+                axios.get("https://youtube.googleapis.com/youtube/v3/subscriptions?part=snippet&mine=true&key=" + ytApiKey, {
+                    headers: {
+                        'Authorization': 'Bearer ' + ytAccessToken
+                    }
+                }).then((response) => {
+
+                    let subListChannelInfos = response.data.items
+                    axios.get("https://youtube.googleapis.com/youtube/v3/search?part=snippet&channelId=" + 'UCZ5TwKZZDHXokyRuAA9iG3w' + "&type=video&key=" + ytApiKey, {
+                        headers: {
+                            'Authorization': 'Bearer ' + ytAccessToken
+                        }
+                    }).then((resp) => {
+                        var subVideosInfos = resp.data.items;
+
+                        for (let i in subVideosInfos) {
+                            console.log(subVideosInfos[i].snippet['thumbnails']['default']['url']);
+                            let videoId = subVideosInfos[i].id["videoId"];
+                            document.getElementById('yt-sub').innerHTML += "<div class='column is-one-quarter'> <div class='card'> <header class='card-header'><button class='card-header-icon' onclick='onPlayerLoad('" + videoId + "')'>Voir</button> </header> <div class='card-image'><figure class='image is-4by3'> <img src='" + subVideosInfos[i].snippet['thumbnails']['default']['url'] + "' alt='Placeholder image'> </figure></div> <div class='card-content'> <div class='media'> <div class='media-content'> <p class='title is-4'>" + subVideosInfos[i].snippet['title'] + "</p> </div> </div> </div> </div> </div>";
+                        }
+                    })
+                })
+            }
+        </script>
 
 </body>
 
