--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <div class="columns">
         <div class="column is-12">
 
-            <!-- HEADER -->
-            <div class="container">
-                <nav class="navbar">
-                    <div class="navbar-brand">
-                        <p class="title"><a href="https://app.yannicksf.xyz">Mul[T•V]ers</a></p>
-                    </div>
-
-                    <div class="navbar-menu">
-                        <div class="navbar-end">
-                            <div class="navbar-item"><button class="button is-dark "><a style="color:red;" target="_blank" href="https://www.netflix.com/browse">Netflix</a></button></div>
-                            <div class="navbar-item"><button class="button is-black"><a style="color: yellow;" target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button></div>
-                            <div class="navbar-item"><button class="button is-info "><a style="color:white;" target="_blank" href="">Prime Vidéo</a></button></div>
-                            <div class="navbar-item"><button class="button is-light"><a style="color: blue;" target="_blank" href="">Disney +</a></button></div>
-                        </div>
-                    </div>
-                </nav>
-                <hr>
-            </div>
-
             <div id="app">
+                <!-- HEADER -->
+                <div class="container">
+                    <nav class="navbar">
+                        <div class="navbar-brand">
+                            <p class="title"><a :href="host">Mul[T•V]ers</a></p>
+                        </div>
+
+                        <div class="navbar-menu">
+                            <div class="navbar-end">
+                                <div class="navbar-item"><button class="button is-dark "><a style="color:red;" target="_blank" href="https://www.netflix.com/browse">Netflix</a></button></div>
+                                <div class="navbar-item"><button class="button is-black"><a style="color: yellow;" target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button></div>
+                                <div class="navbar-item"><button class="button is-info "><a style="color:white;" target="_blank" href="">Prime Vidéo</a></button></div>
+                                <div class="navbar-item"><button class="button is-light"><a style="color: blue;" target="_blank" href="">Disney +</a></button></div>
+                            </div>
+                        </div>
+                    </nav>
+                    <hr>
+                </div>
+
                 <!-- Balise du player -->
                 <div id="place-player">
                     <div v-if="playerMode === 'YT'">
@@ -49,45 +49,47 @@
                         <div class="level-left">
                             <div class="level-item">
                                 <button class="button is-primary is-rounded"> 
-                                    <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Log In</a> 
+                                    <a style="color:white;" :href="twLoginUrl">Log In</a> 
                                 </button>
                             </div>
                             <div class="level-item">
                                 <button class="button is-link" @click="loadTwitchPlayer()">Twitch</button>
                             </div>
                             <div class="level-item">
-                                <span v-for="item in channels" class="tag is-medium">{{ item }}</span>
+                                <span v-for="item in channels" class="tag is-medium" style="margin-left: 5px;">{{ item }}</span>
                             </div>
+                        </div>
+
+                        <div class="level-right">
                             <div class="level-item">
                                 <div class="field has-addons">
                                     <div class="control">
-                                        <input id="search-streamer" class="input is-rounded" type="text" placeholder="">
+                                        <input id="search-streamer" class="input is-rounded" type="text" placeholder="Coming soon ...">
                                     </div>
                                     <div class="control">
                                         <button class="button is-link is-light is-rounded" @click="addStreamerTochannels()">Search</button>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="level-right">
-                            <p class="level-item"><button class="button is-info is-light" @click="progDown()"><</button></p>
-                            <p class="level-item"><button class="button is-info is-light" @click="progUp()">></button></p>
+                            <p class="level-item"><button class="button is-info is-light is-rounded" @click="progDown()"><</button></p>
+                            <p class="level-item"><button class="button is-info is-light is-rounded" @click="progUp()">></button></p>
                         </div>
                     </nav>
 
+                    <!-- YOUTUBE -->
                     <hr>
                     <div class="level">
-                        <div class="level-right">
+                        <div class="level-left">
                             <div class="level-item">
                                 <button class="button is-primary is-rounded">
-                                    <a style="color:white;" href="https://accounts.google.com/o/oauth2/v2/auth?client_id=414258510687-2sr6glgkobrm6brigtn241jv8prqndas.apps.googleusercontent.com&redirect_uri=http://localhost:3000&response_type=token&scope=https://www.googleapis.com/auth/youtube.readonly">Log In</a>
+                                    <a style="color:white;" :href="ytLoginUrl">Log In</a>
                                 </button>
                             </div>
                             <div class="level-item">
                                 <button class="button is-danger" @click="ytApiSub()">Youtube</button>
                             </div>
-
+                        </div>
+                        <div class="level-right">
                             <div class="level-item">
                                 <div class="field has-addons">
                                     <div class="control">
@@ -98,39 +100,68 @@
                                     </div>
                                 </div>
                             </div>
+                            <p class="level-item">
+                                <button class="button is-info is-light is-rounded" :disabled="ytPagination.prevTokenIsActive" @click="ytApiSubPN(this.ytPagination.prevPageToken)"><</button>
+                            </p>
+                            <p class="level-item">
+                                <button class="button is-info is-light is-rounded" @click="ytApiSubPN(this.ytPagination.nextPageToken)">></button>
+                            </p>
                         </div>
                     </div>
 
-                    <div id="yt-sub" class="columns is-multiline">
-                        <div v-for="element in this.ytVideos" class='column is-one-quarter'>
-                            <div class='card'>
-                                <header class='card-header'>
-                                    <button class='card-header-icon' @click="changeUrlVideo(element.id.videoId)">Voir</button>
-                                </header>
-                                <div class='card-image'>
-                                    <figure class='image is-4by3'>
-                                        <img :src="element.snippet.thumbnails.default.url" alt='Placeholder image'>
-                                    </figure>
+                    <div class="container">
+                        <div id="yt-sub" class="columns is-multiline">
+                            <div v-for="element in this.ytPagination.subItems" class='column is-one-fifth'>
+                                <div class='card'>
+                                    <header class='card-header'>
+                                        <button class='card-header-icon' @click="ytSearchVideoBySub(element.snippet.resourceId.channelId)">Voir</button>
+                                    </header>
+                                    <div class='card-image'>
+                                        <figure class='image is-4by3'>
+                                            <img :src="element.snippet.thumbnails.default.url" alt='Placeholder image'>
+                                        </figure>
+                                    </div>
+                                    <div class='card-content'>
+                                        <div class='media'>
+                                            <div class='media-content'>
+                                                <p class='title is-4'>{{ element.snippet.title }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class='card-content'>
-                                    <div class='media'>
-                                        <div class='media-content'>
-                                            <p class='title is-4'>{{ element.snippet.title }}</p>
+                            </div>
+
+                            <div v-for="element in this.ytPagination.videoItems" class='column is-one-fifth'>
+                                <div class='card'>
+                                    <header class='card-header'>
+                                        <button class='card-header-icon' @click="changeUrlVideo(element.id.videoId)">Voir</button>
+                                    </header>
+                                    <div class='card-image'>
+                                        <figure class='image is-4by3'>
+                                            <img :src="element.snippet.thumbnails.default.url" alt='Placeholder image'>
+                                        </figure>
+                                    </div>
+                                    <div class='card-content'>
+                                        <div class='media'>
+                                            <div class='media-content'>
+                                                <p class='title is-4'>{{ element.snippet.title }}</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
 
             </div>
+
         </div>
     </div>
 
     <script>
         // SETTINGS << 
-        var host = "http://localhost:3000"
         let url = window.location.href;
         var twClientId = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
         var ytClientId = '414258510687-2sr6glgkobrm6brigtn241jv8prqndas.apps.googleusercontent.com';
@@ -166,14 +197,22 @@
             },
             data() {
                 return {
+                    host: "https://app.yannicksf.xyz", // "http://localhost:3000"
                     currentPlayer: undefined,
                     playerMode: 'TW',
                     index: 0,
-                    channels: ['yannick_sf'],
+                    channels: [],
                     logedTW: false,
                     ytVideoId: '',
                     ytVideos: [],
-                    logedYT: false
+                    logedYT: false,
+                    ytPagination: {
+                        prevPageToken: '',
+                        prevTokenIsActive: false,
+                        nextPageToken: '',
+                        subItems: [],
+                        videoItems: []
+                    }
                 }
             },
             methods: {
@@ -185,16 +224,14 @@
                         this.currentPlayer = new Twitch.Embed("player", {
                             width: '100%',
                             height: 700,
-                            channel: this.channels[this.index],
+                            channel: 'yannick_sf',
                             // Only needed if this page is going to be embedded on other websites
                             parent: ['localhost']
                         });
                     }, (100));
 
-
-
                     if (this.logedTW) {
-                        this.channels = ['yannick_sf']
+                        this.channels = []
                         this.twApiGetUserInfos();
                     }
                 },
@@ -253,18 +290,39 @@
                             'Authorization': 'Bearer ' + localStorage.getItem('ytAccessToken')
                         }
                     }).then((response) => {
+                        this.ytPagination.subItems = response.data.items
+                        this.ytPagination.nextPageToken = response.data.nextPageToken
 
-                        let subListChannelInfos = response.data.items
-                        axios.get("https://youtube.googleapis.com/youtube/v3/search?part=snippet&channelId=" + 'UCZ5TwKZZDHXokyRuAA9iG3w' + "&type=video&key=" + ytApiKey, {
-                            headers: {
-                                'Authorization': 'Bearer ' + localStorage.getItem('ytAccessToken')
-                            }
-                        }).then((resp) => {
-                            var subVideosInfos = resp.data.items;
-                            for (let i in subVideosInfos) {
-                                this.ytVideos.push(subVideosInfos[i]);
-                            }
-                        })
+                        if (response.data.hasOwnProperty('prevPageToken')) {
+                            this.ytPagination.prevPagetoken = response.data.prevPageToken;
+                            this.ytPagination.prevTokenIsActive = true;
+                        }
+
+                    })
+                },
+                ytApiSubPN(pageToken) {
+                    axios.get("https://youtube.googleapis.com/youtube/v3/subscriptions?part=snippet&mine=true&pageToken=" + pageToken + "&key=" + ytApiKey, {
+                        headers: {
+                            'Authorization': 'Bearer ' + localStorage.getItem('ytAccessToken')
+                        }
+                    }).then((response) => {
+                        this.ytPagination.subItems = response.data.items
+                        this.ytPagination.nextPageToken = response.data.nextPageToken
+
+                        if (response.data.hasOwnProperty('prevPageToken')) {
+                            this.ytPagination.prevPageToken = response.data.prevPageToken;
+                            this.ytPagination.prevTokenIsActive = true;
+                        }
+
+                    })
+                },
+                ytSearchVideoBySub(subChanelId) {
+                    axios.get("https://youtube.googleapis.com/youtube/v3/search?part=snippet&channelId=" + subChanelId + "&type=video&key=" + ytApiKey, {
+                        headers: {
+                            'Authorization': 'Bearer ' + localStorage.getItem('ytAccessToken')
+                        }
+                    }).then((resp) => {
+                        this.ytPagination.videoItems = resp.data.items;
                     })
                 },
                 changeUrlVideo(value) {
@@ -274,6 +332,12 @@
 
             },
             computed: {
+                twLoginUrl() {
+                    return 'https://id.twitch.tv/oauth2/authorize?client_id=' + twClientId + '&redirect_uri=' + this.host + '&scope=user:read:follows&response_type=token'
+                },
+                ytLoginUrl() {
+                    return 'https://accounts.google.com/o/oauth2/v2/auth?client_id=' + ytClientId + '&redirect_uri=' + this.host + '&response_type=token&scope=https://www.googleapis.com/auth/youtube.readonly'
+                },
                 ytUrlVideo() {
                     return 'https://www.youtube.com/embed/' + this.ytVideoId
                 },
